--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -28,7 +28,14 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	<filter>
+		<filter-name>SamlFilter</filter-name>
+		<filter-class>org.sms.project.filter.SamlFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>SamlFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>/WEB-INF/config/log4j/log4j.xml</param-value>
