--- a/pom.xml
+++ b/pom.xml
@@ -319,5 +319,11 @@
 			<artifactId>opensaml</artifactId>
 			<version>2.6.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-cas</artifactId>
+			<version>4.0.3.RELEASE</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
