--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -84,9 +84,15 @@
 		<session-timeout>60</session-timeout>
 	</session-config>
 	<welcome-file-list>
-     	<!--<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file> -->
-		<welcome-file>login.jsp</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error/error404.jsp</location>
+	</error-page>
+	<!-- 500错误拦截 -->
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error/error500.jsp</location>
+	</error-page>
 </web-app>
