--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -91,11 +91,11 @@
 	</welcome-file-list>
 	<error-page>
 		<error-code>404</error-code>
-		<location>/jsp/error/404.jsp</location>
+		<location>/html/404.html</location>
 	</error-page>
 	<!-- 500错误拦截 -->
 	<error-page>
 		<error-code>500</error-code>
-		<location>/jsp/error/500.jsp</location>
+		<location>/html/500.html</location>
 	</error-page>
 </web-app>
