--- a/pom.xml
+++ b/pom.xml
@@ -325,5 +325,10 @@
 			<version>4.0.3.RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.8</version>
+		</dependency>
 	</dependencies>
 </project>
